--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -75,10 +75,14 @@ jobs:
         - name: Terraform Plan
           if: steps.read-destroy-config.outputs.destroy != 'true'
           id: terraform-plan
-          run: cd infra &&
-            terraform workspace select ${{ inputs.environment }} || terraform workspace new ${{ inputs.environment }} &&
-            terraform plan -var-file="./envs/${{ inputs.environment }}/terraform.tfvars" -out="${{ inputs.environment  }}.plan"
-
+          run: |
+            cd infra &&
+            TF_LOG=TRACE terraform workspace select ${{ inputs.environment }} || terraform workspace new ${{ inputs.environment }} &&
+            terraform plan -var-file="./envs/${{ inputs.environment }}/terraform.tfvars" -out="${{ inputs.environment }}.plan"
+          env:
+            AWS_REGION: ${{ inputs.aws-region }}
+            TF_LOG: TRACE # <--- Esta linha é crucial!
+            
         - name: Terraform Apply
           if: steps.read-destroy-config.outputs.destroy != 'true'
           id: terraform-apply
