--- a/.github/workflows/terraform-import.yaml
+++ b/.github/workflows/terraform-import.yaml
@@ -67,10 +67,14 @@ jobs:
       - name: Perform Terraform Import
         working-directory: ${{ github.event.inputs.terraform_working_directory }}
         run: |
-          terraform import \
-            -var="enviroment=dev" \ # Assumindo que 'enviroment' é uma GitHub Var ou Secret
+          # Construa as opções de variáveis primeiro
+          # Certifique-se de que cada linha com -var esteja corretamente formatada
+          # sem a barra invertida, e o comando import venha depois de todas as vars.
+          terraform \
+            -var="enviroment=dev" \
             -var="bucket_name_bovespa_raw=dev-sa-east-1-bovespa-raw" \
             -var="bucket_name_bovespa_refined=dev-sa-east-1-bovespa-refined" \
+            import \
             ${{ github.event.inputs.resource_address }} \
             ${{ github.event.inputs.resource_id }}
         id: import_step
