--- a/.github/workflows/terraform-import.yaml
+++ b/.github/workflows/terraform-import.yaml
@@ -22,12 +22,11 @@ on:
         required: true
         type: string
         default: 'sa-east-1'
-      # NOVO INPUT: Para especificar o subdiretório do Terraform
       terraform_working_directory:
         description: 'Subdiretório onde os arquivos .tf estão (ex: "terraform" ou "src/infra")'
-        required: false # Pode ser opcional se os arquivos estiverem na raiz do repo
+        required: false
         type: string
-        default: 'infra' # Deixe vazio se estiver na raiz, ou coloque o nome da pasta
+        default: 'infra'
 
 permissions:
   id-token: write # Necessário para OIDC
@@ -36,7 +35,7 @@ permissions:
 jobs:
   import_resource:
     runs-on: ubuntu-latest
-    environment: dev # Defina seu ambiente, se você usa GitHub Environments
+    environment: dev
 
     steps:
       - name: Checkout Code
@@ -54,7 +53,6 @@ jobs:
           terraform_version: 1.8.3 
 
       - name: Terraform Init
-        # Usamos o 'working-directory' para que o Terraform encontre os arquivos .tf
         working-directory: ${{ github.event.inputs.terraform_working_directory }}
         run: |
           terraform init \
@@ -64,9 +62,19 @@ jobs:
             -backend-config="dynamodb_table=ordepzero-sa-east-1-terraform-lock" \
             -upgrade 
 
+      - name: Create Terraform Variables File
+        working-directory: ${{ github.event.inputs.terraform_working_directory }}
+        run: |
+          cat <<EOF > import-vars.tfvars
+          enviroment = "dev"
+          bucket_name_bovespa_raw = "dev-sa-east-1-bovespa-raw"
+          bucket_name_bovespa_refined = "dev-sa-east-1-bovespa-refined"
+          EOF
+        shell: bash # Garante que o heredoc funcione corretamente
+
       - name: Perform Terraform Import
         working-directory: ${{ github.event.inputs.terraform_working_directory }}
-        run: "terraform -var=\"enviroment=dev\" -var=\"bucket_name_bovespa_raw=dev-sa-east-1-bovespa-raw\" -var=\"bucket_name_bovespa_refined=dev-sa-east-1-bovespa-refined\" import ${{ github.event.inputs.resource_address }} ${{ github.event.inputs.resource_id }}"
+        run: terraform import -var-file="import-vars.tfvars" ${{ github.event.inputs.resource_address }} ${{ github.event.inputs.resource_id }}
         id: import_step
 
       - name: Check Import Result (Optional)
