--- a/.github/workflows/terraform-import.yaml
+++ b/.github/workflows/terraform-import.yaml
@@ -66,9 +66,9 @@ jobs:
         working-directory: ${{ github.event.inputs.terraform_working_directory }}
         run: |
           cat <<EOF > import-vars.tfvars
-          enviroment = "dev"
-          bucket_name_bovespa_raw = "dev-sa-east-1-bovespa-raw"
-          bucket_name_bovespa_refined = "dev-sa-east-1-bovespa-refined"
+          enviroment = "prod"
+          bucket_name_bovespa_raw = "prod-sa-east-1-bovespa-raw"
+          bucket_name_bovespa_refined = "prod-sa-east-1-bovespa-refined"
           EOF
         shell: bash # Garante que o heredoc funcione corretamente
 
