--- a/.github/workflows/terraform-import.yaml
+++ b/.github/workflows/terraform-import.yaml
@@ -16,7 +16,7 @@ on:
         description: 'Caminho completo da chave do state file S3 (ex: env:/dev/terraform-infra-pipeline-aws/terraform.tfstate)'
         required: true
         type: string
-        default: 'env:/prod/terraform-infra-pipeline-aws'
+        default: 'env:/dev/terraform-infra-pipeline-aws'
       aws_region:
         description: 'Região AWS para o Terraform'
         required: true
@@ -66,9 +66,9 @@ jobs:
         working-directory: ${{ github.event.inputs.terraform_working_directory }}
         run: |
           cat <<EOF > import-vars.tfvars
-          enviroment = "prod"
-          bucket_name_bovespa_raw = "prod-sa-east-1-bovespa-raw"
-          bucket_name_bovespa_refined = "prod-sa-east-1-bovespa-refined"
+          enviroment = "dev"
+          bucket_name_bovespa_raw = "dev-sa-east-1-bovespa-raw"
+          bucket_name_bovespa_refined = "dev-sa-east-1-bovespa-refined"
           EOF
         shell: bash # Garante que o heredoc funcione corretamente
 
