--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,6 +51,13 @@ jobs:
           run: |
             DESTROY="$(jq -r '.${{ inputs.environment }}' ./infra/destroy_config.json)"
             echo "destroy=$(echo $DESTROY)" >> $GITHUB_OUTPUT
+            
+        - name: Clean Terraform state
+          run: |
+            echo "Forcing a clean state by removing .terraform directory and .terraform.lock.hcl"
+            rm -rf .terraform
+            rm -f .terraform.lock.hcl
+          working-directory: infra
 
         - name: Terraform Init
           run: |
