--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,7 +38,6 @@ jobs:
           uses: hashicorp/setup-terraform@v3
           with:
             terraform_version: 1.8.3
-            terraform_wrapper: false
 
         - name: Configure AWS credentials
           uses: aws-actions/configure-aws-credentials@v4
@@ -53,18 +52,17 @@ jobs:
             DESTROY="$(jq -r '.${{ inputs.environment }}' ./infra/destroy_config.json)"
             echo "destroy=$(echo $DESTROY)" >> $GITHUB_OUTPUT
 
-        - name: Terraform Init and Validate
+        - name: Terraform Init
           run: |
-            echo "--- Cleaning, Initializing, and Validating in a single step ---"
-            rm -rf .terraform
-            rm -f .terraform.lock.hcl
-            echo "--- Initializing Terraform ---"
-            terraform init -upgrade \
+            terraform init -upgrade\
               -backend-config="bucket=${{ inputs.aws-statefile-s3-bucket }}" \
               -backend-config="key=${{ github.event.repository.name }}" \
               -backend-config="region=${{ inputs.aws-region }}" \
               -backend-config="dynamodb_table=${{ inputs.aws-lock-dynamodb-table }}"
-            echo "--- Validating configuration ---"
+          working-directory: infra
+          
+        - name: Terraform Validate
+          run: |
             terraform validate -no-color
           working-directory: infra
 
@@ -72,7 +70,6 @@ jobs:
           if: steps.read-destroy-config.outputs.destroy == 'true'
           id: terraform-destroy
           run: |
-            echo "--- Running in $(pwd) ---"
             terraform workspace select ${{ inputs.environment }} || terraform workspace new ${{ inputs.environment }} &&
             terraform destroy -var-file="./envs/${{ inputs.environment }}/terraform.tfvars" -auto-approve
           working-directory: infra
@@ -81,7 +78,6 @@ jobs:
           if: steps.read-destroy-config.outputs.destroy != 'true'
           id: terraform-plan
           run: |
-            echo "--- Running in $(pwd) ---"
             terraform workspace select ${{ inputs.environment }} || terraform workspace new ${{ inputs.environment }} &&
             terraform plan -var-file="./envs/${{ inputs.environment }}/terraform.tfvars" -out="${{ inputs.environment  }}.plan"
           working-directory: infra
@@ -90,7 +86,6 @@ jobs:
           if: steps.read-destroy-config.outputs.destroy != 'true'
           id: terraform-apply
           run: |
-            echo "--- Running in $(pwd) ---"
             terraform workspace select ${{ inputs.environment }} || terraform workspace new ${{ inputs.environment }} &&
             terraform apply "${{ inputs.environment  }}.plan"
           working-directory: infra
